<resources>
    <string name="app_name">Helokings</string>
    <string name="or">Or</string>
    <string name="login_means">Login means you agree to our</string>
    <string name="terms"><u>Terms</u></string>
    <string name="privacy_policy"><u>&amp; privacy Policy</u></string>
    <string name="otp_send">OTP SEND</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="moment">Moment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my">My</string>
    <string name="room_page_host">Host</string>
    <string name="tomastr">Top Master in Brand</string>
    <string name="onlive">ON LIVE</string>
    <string name="helo_kings_store">Helo Kings Store</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="intellectual_property_rights">Intellectual Property Rights</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="account">Account</string>
    <string name="account_binding">Account Binding</string>
    <string name="profile">Profile</string>
    <string name="privacy_policya">Privacy Policy</string>
    <string name="join_an_agency">Join an Agency</string>
    <string name="community_content_rules">Community Content Rules</string>
    <string name="noble">Noble</string>
    <string name="id">Id:</string>
    <string name="come_to_join_tha_family">Come to join tha family</string>
    <string name="join_now">Join now</string>
    <string name="badge">Badge</string>
    <string name="vip">VIP</string>
    <string name="wallet">Wallet</string>
    <string name="mytools">MyTools</string>
    <string name="host">Host</string>
    <string name="activity">Activity</string>
    <string name="performs">Performs</string>
    <string name="store">Store</string>
    <string name="coupon">Coupon</string>
    <string name="verified">Verified</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="task">Task</string>
    <string name="level">Level</string>
    <string name="tutorials">Tutorials</string>
    <string name="help">Help</string>
    <string name="ranking">Ranking</string>
    <string name="user_name">User Name</string>
    <string name="about_yourself">About Yourself</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="viscount">Viscount</string>
    <string name="count">Count</string>
    <string name="marquis">Marquis</string>
    <string name="duke">Duke</string>
    <string name="king">King</string>
    <string name="achievement">Achievement</string>
    <string name="honor">Honor</string>
    <string name="available_point">Available Point</string>
    <string name="available_crystal">Available Crystal</string>
    <string name="account_id">Account ID:</string>
    <string name="_1_to_solve_top_up_issue_please_go_to_feedback_page">1.TO Solve top-up issue,please go to <u><font color='#017D7E'> Feedback</font></u>  page</string>
    <string name="note">NOTE:</string>
    <string name="my_tools">My Tools</string>
    <string name="rs">Rs</string>
    <string name="_250bonus">+250Bonus</string>
    <string name="id_68972093">id_68972093</string>
    <string name="uploading_video">Uploading Video</string>
    <string name="please_wait_video_is_uploading">Please Wait while uploading video</string>
    <string name="the_wheat_position_has_been_locked">This seat has been closed.</string>

</resources>