<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login"
    android:layout_height="match_parent"
    tools:context=".Login.OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/mainlogo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/typebuttonback"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="15sp">

                        <EditText
                            android:id="@+id/user_otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="Enter OTP"
                            android:inputType="number|phone"
                            android:maxLength="6"
                            android:singleLine="true"
                            android:textColor="@color/grayDark" />
                    </LinearLayout>

               <com.skydoves.elasticviews.ElasticButton
                   android:id="@+id/et_login"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:textColor="@color/white"
                   android:layout_marginTop="30dp"
                   android:textSize="15dp"
                   android:text="@string/login"
                   android:background="@drawable/btn_bg"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/resend_otp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:gravity="center"
                            android:text="Resend OTP"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/timer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="30S"
                            android:textColor="@color/light_blue"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="invisible"
                        android:weightSum="1">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="0.4"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text="@string/or"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_weight="0.4"
                            android:background="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:visibility="invisible"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.skydoves.elasticviews.ElasticImageView
                            android:id="@+id/iv_fb"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/facebook"
                            app:imageView_duration="200"
                            app:imageView_scale="0.93" />

                        <com.skydoves.elasticviews.ElasticImageView
                            android:id="@+id/iv_whatsapp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/whatsapp"
                            app:imageView_duration="200"
                            app:imageView_scale="0.93" />
                        <com.skydoves.elasticviews.ElasticImageView
                            android:id="@+id/iv_linked"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/linkedin"
                            app:imageView_duration="200"
                            app:imageView_scale="0.93" />

                    </LinearLayout>



                </LinearLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_means"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/lterms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:gravity="start"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lprivacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:gravity="start"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>